CHANGELOG for ClamTk:

5.22 - Sep XX 2016
------------------
        * Directories not scanning if users home includes
          /sys or /dev (Github #61). Thanks majorbob!
        * Fix to names of whitelisted directories with extra ";"
        * Begin digitally signing rpms again, like debs
        * Updated language files

5.21 - Aug 21 2016
------------------
        * Update man pages to include updated URLs for bug reporting
        * Explicitly add archive scanning (Github #59)
        * Removed most monospacing as requested
        * Improved text layout
        * Updated language files (ja), Indonesian (id), Polish (pl),
          Esperanto (eo), Spanish (es), Danish (da), Malay (ms)

5.20 - Sep 6 2015
-----------------
        * Remove nautilus as dependence for clamtk (BZ #1260284)
        * Updated language files: Khmer (km), Thai (th), Lao (lo),
          French (fr)

5.19 - June 26 2015
-------------------
        * Minor fix for History view and row selection (iter)
        * Minor tweak to improve display of objects scanned
        * Continue replacing Windows -> boxes
        * Updated language files: Korean (ko_KR), Italian (it)

5.18 - May 9 2015
-----------------
        * Improvements with Results window
        * Minor tweak on PUA-identified files
        * Add github bug reporting page to help documentation
        * Updated language files: Indonesian (id), Uzbek (uz), Finnish (fi),
          Ukrainian (uk), Galician (gl), German (de), Hebrew (he),
          English (en_UK), Chinese (zh_TW), Korean (ko_KR), Dutch (nl)

5.17 - Apr 11 2015
------------------
        * Fix crash with Results window
        * Remove freecode references from help files

5.16 - Apr 10 2015
------------------
        * Properly destroy Results window
        * Fix incorrect version in legacy build
        * Fix progressbar count issue for when recursive is
          not selected
        * Improve hidden files scanning/counting