@@ -192,6 +192,11 @@ sub filter {
     # https://github.com/dave-theunsub/clamtk/issues/59
     $directive .= ' --scan-archive=yes';
 
+    # Increase maximum amount of data to scan for each container file;
+    # goes hand in hand with the $directive above
+    # https://github.com/dave-theunsub/clamtk/issues/59
+    $directive .= ' -max-scansize=500M';
+
     # By default, we ignore .gvfs directories.
     # Once we figure out KDE's process, we'll exclude that too.
     #<<<
