@@ -3,9 +3,10 @@ CHANGELOG for ClamTk:
 5.22 - Sep XX 2016
 ------------------
         * Directories not scanning if users home includes
-          /sys or /dev (Github #61). Thanks majorbob!
+          /sys or /dev (Github #61).
         * Fix to names of whitelisted directories with extra ";"
         * Begin digitally signing rpms again, like debs
+        * Fix all of Github #59 (max-scansize)
         * Updated language files
 
 5.21 - Aug 21 2016
